--- a/res/layout/learns_item.xml
+++ b/res/layout/learns_item.xml
@@ -15,8 +15,6 @@
             android:id="@+id/txt_lessons"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:height="40dp"
             android:textSize="14sp" >
         </TextView>
 
@@ -24,8 +22,8 @@
             android:id="@+id/txt_grade"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:height="40dp"
+            android:layout_marginLeft="4sp"
+            android:layout_marginRight="4sp"
             android:textSize="14sp" >
         </TextView>
 
@@ -33,8 +31,6 @@
             android:id="@+id/txt_credit"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:height="40dp"
             android:textSize="14sp" >
         </TextView>
 
