Signed-off-by: jack <lqs278177353@126.com>

--- a/res/layout/things_main.xml
+++ b/res/layout/things_main.xml
@@ -3,9 +3,37 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
     
-    <TextView 
-        android:id="@+id/thing_collage"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"/>
+ 	<LinearLayout
+ 	    android:id="@+id/thing1"
+ 	    android:layout_width="match_parent"
+ 	    android:layout_height="200dp"
+ 	    android:orientation="vertical"
+ 	    android:background="#23B14D" >
 
+    	<TextView 
+	        android:id="@+id/thing_collage"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:textSize="20dp"
+	        android:textColor="#FFFFFF"
+	        android:text="@string/thing_collage"/>
+	    
+	</LinearLayout>
+	
+	<LinearLayout
+ 	    android:layout_width="match_parent"
+ 	    android:layout_height="match_parent"
+ 	    android:layout_below="@id/thing1"
+ 	    android:orientation="vertical"
+ 	    android:background="#FED180" >
+
+    	<TextView 
+	        android:id="@+id/thing_depart"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:textSize="20dp"
+	        android:textColor="#FFFFFF"
+	        android:text="@string/thing_collage"/>
+	    
+	</LinearLayout>
 </RelativeLayout>
