--- a/res/layout/teachers_main.xml
+++ b/res/layout/teachers_main.xml
@@ -38,10 +38,10 @@
 	</RelativeLayout>
 	
     <RelativeLayout 
+        android:id="@+id/teacher_lb"
         android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_below="@id/teacher_la"
-	    android:layout_marginTop="10dp"
 	    android:background="#CA4521" >
 	    
         <TextView
@@ -65,6 +65,13 @@
 	        android:layout_below="@id/search_department"
 	        android:text="@string/oks" />
 	
+	</RelativeLayout>
+	<RelativeLayout
+        android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_below="@id/teacher_lb"
+	    android:background="#AD870C" >
+	    
 	    <Button
 	        android:id="@+id/department_re_button"
 	        android:layout_width="match_parent"
